--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,6 @@
 {
+    "name": "iamfateh/magento2",
     "require": {
-        "vendor/magento2": "1.3.2"
+        "vendor/package": "1.3.2"
     }
 }
