--- a/composer.json
+++ b/composer.json
@@ -8,9 +8,9 @@
     "AFL-3.0"
   ],
   "require": {
-    "php": "~7.0.2|~7.1.0|~7.1.1|~7.1.2|~7.1.3|~7.1.4|~7.1.5|~7.1.6|~7.1.7|~7.1.8",
     "magento/framework": "2.2.3"
   },
+  "minimum-stability": "beta",
   "autoload": {
     "files": [ "registration.php" ],
     "psr-4": {
