--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
         }
     ],
     "require": {
-        "php": "7.0.2|7.0.4|~7.0.6|~7.1.0"
+        "php": "7.0.2|7.0.4|~7.0.6|~7.1.0|7.0.30"
     },
     "minimum-stability": "dev",
     "type": "magento2-module",
