--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
-    "name": "vikas/shipwaytracking",
-    "description": "Vikas Shipwaytracking",
+    "name": "iamfateh/magento2",
+    "description": "iamfateh Magento2",
     "license": "OSL-3.0",
     "authors": [
         {
@@ -16,7 +16,7 @@
     "version": "100.0.0",
     "autoload": {
         "psr-4": {
-            "Vikas\\ShipwayTracking\\": ""
+            "iamfateh\\Magento2\\": ""
         },
         "files": [
             "registration.php"
