--- a/composer.json
+++ b/composer.json
@@ -1,25 +1,10 @@
 {
     "name": "iamfateh/magento2",
-    "description": "iamfateh Magento2",
-    "license": "OSL-3.0",
-    "authors": [
-        {
-            "name": "Shipway Pvt Ltd",
-            "email": "contact@onjection.com"
-        }
-    ],
-    "require": {
-        
-    },
-    "minimum-stability": "dev",
+    "description": "shipway magento 2 module",
     "type": "magento2-module",
-    "version": "100.0.0",
-    "autoload": {
-        "psr-4": {
-            "iamfateh\\Magento2\\": ""
-        },
-        "files": [
-            "registration.php"
-        ]
-    }
+    "require": {
+        "iamfateh/magento2": "dev-master"
+    },
+    "license": "OSL-3.0",
+    "minimum-stability": "dev"
 }
